# monitor

./: .gitattributes  .gitignore  BUILD.sh  CMakeLists.txt  Dockerfile  INSTALL.md  README.md  RUN  RUN.md  RUN.sh  TIDY.sh  architecture.md  main.cpp
.github/workflows/: clang-format.yml  cmake.yml  discord.yml  main.yml  super-linter.yml
components/pango_video/include/pangolin/video/drivers/: ffmpeg.h
qt/: CMakeLists.txt  geometryengine.cpp  main.cpp  openglwidget.cpp  openglwidget.h
qt/src/cpp/: main.cpp
qt/src/cpp/views/: chartView.cpp  openglView.cpp  viewBase.cpp
qt/src/include/util/: geometryengine.h
qt/src/include/views/: chartView.h  viewBase.h
research/aruco/: cameraCalibration.py  main.py
src/: main.cpp
trainer/foliage_segnet/: model.py
trainer/labeler/: README.md  pom.xml
trainer/labeler/lib/: libopencv_java454.dylib
trainer/labeler/src/main/java/: module-info.java
trainer/labeler/src/main/java/io/github/altoponix/plantsegmentation/: Main.java  SegmentationController.java
trainer/labeler/src/main/resources/io/github/altoponix/plantsegmentation/: segmentation-view.fxml
unit/: .clang-format  BUILD.sh  CMakeLists.txt  Dockerfile  RUN.md  TIDY.sh  cppguide.html  left_cam.yml  outputs.yml  right_cam.yml  stereo_cam.yml
unit/daq/: daq.ino
unit/docs/: ARCHITECTURE.md  RUN.md
unit/src/: calib_photos.py  constants.h  main.cpp  pangolin.cpp  utils.cpp  utils.h
unit/src/config/: configs.cpp  configs.h  secrets.h
unit/src/main/cpp/: robot.cpp
unit/src/main/cpp/archived/cv/: calibration.py  constants.h  main.cpp  photos.py  utils.cpp  utils.h
unit/src/main/cpp/config/: configs.cpp
unit/src/main/cpp/robot/: commands.cpp  control.cpp  daq.cpp  hardwareAdapter.cpp  outputs.cpp  robot.cpp  robotState.cpp  state.cpp
unit/src/main/cpp/subsystems/: blinkingLights.cpp  display.cpp  general.cpp  manager.cpp  miscellaneous.cpp  multithreaderer.cpp  peristalticPump.cpp  threadedBase.cpp  threadedManager.cpp  threaderer.cpp  uploader.cpp  vision.cpp
unit/src/main/cpp/utils/: connection.cpp  daq.cpp  dummyVideoCapture.cpp  helpers.cc  helpers.cpp  json.cpp  pidController.cpp  restclient.cc  restclient.cpp  utils.cpp
unit/src/main/include/config/: configs.h  constants.h  secrets.h
unit/src/main/include/robot/: commands.h  control.h  daq.h  hardwareAdapter.h  outputs.h  robotState.h  state.h
unit/src/main/include/subsystems/: blinkingLights.h  display.h  general.h  hardwareBase.h  manager.h  miscellaneous.h  multithreaderer.h  peristalticPump.h  subsystemBase.h  threadedBase.h  threadedManager.h  threaderer.h  uploader.h  vision.h
unit/src/main/include/utils/: connection.h  daq.h  dummyVideoCapture.h  helpers.h  json.h  pidController.h  restclient.h  utils.h
unit/src/robot/: commands.cpp  commands.h  control.cpp  control.h  outputs.cpp  outputs.h  robot.cpp  state.cpp  state.h
unit/src/routines/: routineBase.h  routinerer.h
unit/src/subsystems/: blinkingLights.cpp  blinkingLights.h  display.cpp  display.h  miscellaneous.cpp  miscellaneous.h  subsystemBase.h  tcp.cpp  tcp.h  threaderer.cpp  threaderer.h  uploader.cpp  uploader.h  vision.cpp  vision.h
unit/src/utils/: connection.cpp  connection.h  daq.cpp  dummyVideoCapture.cpp  dummyVideoCapture.h  helpers.cpp  helpers.h  json.cpp  json.h  pidController.cpp  pidController.h  restclient.cpp  restclient.h  utils.cpp  zmq.h
viewer/: CMakeLists.txt
viewer/assets/shaders/: shaders.qrc
viewer/assets/textures/: textures.qrc
viewer/src/: main.cpp
viewer/src/cpp/util/: geometryengine.cpp
viewer/src/cpp/views/: chartView.cpp  openglView.cpp  viewBase.cpp
viewer/src/include/views/: openglView.h  viewBase.h
viewer/src/util/: geometryEngine.cpp  geometryEngine.h
viewer/src/utils/: TCPThread.cpp  TCPThread.h  TabWidget.cpp  TabWidget.h  json.cpp  json.h  utils.cpp  utils.h  zmq.h
viewer/src/views/: camStreams.cpp  camStreams.h  chartView.cpp  chartView.h  liveGraph.cpp  liveGraph.h  openglView.cpp  openglView.h  pointCloud.cpp  pointCloud.h  viewBase.cpp
